--- a/src/app/products/product-shel/product-shel.component.html
+++ b/src/app/products/product-shel/product-shel.component.html
@@ -1,1 +1,19 @@
-<p>product-shel works!</p>
+<div class="list-group">
+  <div>
+    <app-product-list [displayCode]="displayCode$ | async"
+                     [products]="products$ | async"
+                     [selectedProduct]="selectedProduct$ | async"
+                     [errorMessage]="errorMessage$ | async"
+                     (displayCodeChanged)="checkChanged()"
+                     (initializeNewProduct)="newProduct()"
+                     (productWasSelected)="productSelected($any($event))"></app-product-list>
+  </div>
+  <div >
+    <app-product-edit [selectedProduct]="selectedProduct$ | async"
+                     [errorMessage]="errorMessage$ | async"
+                     (clearCurrent)="clearProduct()"
+                     (update)="updateProduct($any($event))"
+                     (delete)="deleteProduct($any($event))"
+                     (create)="saveProduct($any($event))"></app-product-edit>
+  </div>
+</div>
